# CMakeProjectTemplate

./: CMakeLists.txt  README.md
.github/: CONTRIBUTING.md
.github/workflows/: ci.yaml
3rd/: CMakeLists.txt
cmake/: deb_package.cmake  package.cmake
src/: CMakeLists.txt  main.cpp
src/inc/: version.h.in
test/: CMakeLists.txt  version.test.cpp
